--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <h1>Dayanne Alcantara</h1>
         <a href="https://github.com/dayannealcantara"> <img src="./imagens/github 2.svg" alt=""> dayannealcantara</a>
+        <p>Beginning Jr Web Developer, studying JavaScript programming language (in career transition).</p>
       </div>
     </main>
   </body>
