--- a/index.html
+++ b/index.html
@@ -15,24 +15,30 @@
         </div>
 
         <h1>Dayanne Alcantara</h1>
-        <a href="https://github.com/dayannealcantara"> <img src="./imagens/github 2.svg" alt=""> dayannealcantara</a>
-        <p>Beginning Jr Web Developer, studying JavaScript programming language (in career transition).</p>
+        <a href="https://github.com/dayannealcantara">
+          <img src="./imagens/github 2.svg" alt="" /> dayannealcantara</a
+        >
+        <p>
+          Beginning Jr Web Developer, studying JavaScript programming language
+          (in career transition).
+        </p>
         <ul>
-            <li>
-               <a href="https://www.instagram.com/dayanneal/">
-               <img src="./imagens/instagram.svg" alt=""></a>
-            </li>
-            <li>
-                <a href="https://twitter.com/DayanneAlcanta2">
-                    <img src="./imagens/twiter.svg" alt=""></a>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/dayanne.alcantara.3">
-                    <img src="./imagens/facebook.svg" alt=""></a>
-            </li>
+          <li>
+            <a href="https://www.instagram.com/dayanneal/">
+              <img src="./imagens/instagram.svg" alt="icone instagram" target="_blank"/></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/DayanneAlcanta2">
+              <img src="./imagens/twiter.svg" alt="icone twiter" target="_blank"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/dayanne.alcantara.3">
+              <img src="./imagens/facebook.svg" alt="icone facebook" target="_blank"
+            /></a>
+          </li>
         </ul>
       </div>
     </main>
   </body>
 </html>
-
