--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dayanne Alcantara - DoWhile 2021</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <main>
@@ -16,8 +21,7 @@
 
         <h1>Dayanne Alcantara</h1>
         <a href="https://github.com/dayannealcantara">
-          <img src="./imagens/github 2.svg" alt="" /> dayannealcantara</a
-        >
+          <img src="./imagens/github 2.svg" alt=""/> dayannealcantara</a>
         <p>
           Beginning Jr Web Developer, studying JavaScript programming language
           (in career transition).
