--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dayanne Alcantara - DoWhile 2021</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
       <div class="container">
         <div class="avatar">
+          <span>
           <img src="./imagens/build.svg" alt="selo da Rocketseat" />
-          <img src="./imagens/foto.png" alt="foto pessoal" />
+        </span>
+          <img src="./imagens/eu.jpeg" alt="foto pessoal" />
         </div>
 
         <h1>Dayanne Alcantara</h1>
         <a href="https://github.com/dayannealcantara">
-          <img src="./imagens/github 2.svg" alt=""/> dayannealcantara</a>
+          <img src="./imagens/github 2.svg" alt="" /> dayannealcantara</a
+        >
         <p>
           Beginning Jr Web Developer, studying JavaScript programming language
           (in career transition).
@@ -29,16 +34,26 @@
         <ul>
           <li>
             <a href="https://www.instagram.com/dayanneal/">
-              <img src="./imagens/instagram.svg" alt="icone instagram" target="_blank"/></a>
+              <img
+                src="./imagens/instagram.svg"
+                alt="icone instagram"
+                target="_blank"
+            /></a>
           </li>
           <li>
             <a href="https://twitter.com/DayanneAlcanta2">
-              <img src="./imagens/twiter.svg" alt="icone twiter" target="_blank"
+              <img
+                src="./imagens/twiter.svg"
+                alt="icone twiter"
+                target="_blank"
             /></a>
           </li>
           <li>
             <a href="https://www.facebook.com/dayanne.alcantara.3">
-              <img src="./imagens/facebook.svg" alt="icone facebook" target="_blank"
+              <img
+                src="./imagens/facebook.svg"
+                alt="icone facebook"
+                target="_blank"
             /></a>
           </li>
         </ul>
