corrigindo tag target

--- a/index.html
+++ b/index.html
@@ -33,27 +33,21 @@
         </p>
         <ul>
           <li>
-            <a href="https://www.instagram.com/dayanneal/">
-              <img
-                src="./imagens/instagram.svg"
-                alt="icone instagram"
-                target="_blank"
+            <a href="https://www.instagram.com/dayanneal/" target="_blank">
+              <img src="./imagens/instagram.svg" alt="icone instagram"
             /></a>
           </li>
           <li>
-            <a href="https://twitter.com/DayanneAlcanta2">
-              <img
-                src="./imagens/twiter.svg"
-                alt="icone twiter"
-                target="_blank"
+            <a href="https://twitter.com/DayanneAlcanta2" target="_blank">
+              <img src="./imagens/twiter.svg" alt="icone twiter"
             /></a>
           </li>
           <li>
-            <a href="https://www.facebook.com/dayanne.alcantara.3">
-              <img
-                src="./imagens/facebook.svg"
-                alt="icone facebook"
-                target="_blank"
+            <a
+              href="https://www.facebook.com/dayanne.alcantara.3"
+              target="_blank"
+            >
+              <img src="./imagens/facebook.svg" alt="icone facebook"
             /></a>
           </li>
         </ul>
