--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
         </div>
 
         <h1>Dayanne Alcantara</h1>
-        <a href="https://github.com/dayannealcantara">
+        <a href="https://github.com/dayannealcantara" target="_blank">
           <img src="./imagens/github 2.svg" alt="" /> dayannealcantara</a
         >
         <p>
-          Beginning Jr Web Developer, studying JavaScript programming language
-          (in career transition).
+          Desenvolvedora Web (Jr) iniciante, em transição de carreira, estudando JavaScript || React.
         </p>
         <ul>
           <li>
