Pegando informções diretas do github

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           <span>
             <img src="./imagens/build.svg" alt="selo da Rocketseat" />
           </span>
-          <img src="./imagens/eu.jpeg" alt="foto pessoal" />
+          <img src="./imagens/eu.jpeg" alt="foto pessoal" id="userImagem" />
         </div>
 
-        <h1>Dayanne Alcantara</h1>
-        <a href="https://github.com/dayannealcantara" target="_blank">
-          <img src="./imagens/github 2.svg" alt="" /> dayannealcantara</a
+        <h1 id="userName">Dayanne Alcantara</h1>
+        <a  id="userLink" href="https://github.com/dayannealcantara" target="_blank">
+          <img src="./imagens/github 2.svg" alt="icone github" /> <span id="userLogin">dayannealcantara</span></a
         >
-        <p>
+        <p id="userBio"> 
           Desenvolvedora Web (Jr) iniciante, em transição de carreira, estudando JavaScript || React.
         </p>
         <ul>
